preserved/historical-layout/crates/apps/jackin-capsule/src/tui/components/dialog/snapshots/jackin_capsule__tui__components__dialog__tests__usage_dialog_zai_provider_100x34.snap
---
source: crates/apps/jackin-capsule/src/tui/components/dialog/tests.rs
assertion_line: 2089
expression: "render_usage_dialog_snapshot_for_view(100, 34, UsageDialogTab::Provider,\nzai_usage_view_fixture())"
---



       ┌ Usage ─────────────────────────────────────────────────────────────────────────────┐
       │         Overview   OpenAI   Anthropic   Amp   xAI   Z.AI   Kimi   MiniMax          │
       │                                                    ──────                          │
       │────────────────────────────────────────────────────────────────────────────────────│
       │  Z.AI                                                           account@work.test  │
       │  Updated 2m ago                                                                    │
       │────────────────────────────────────────────────────────────────────────────────────│
       │  Tokens                                                                            │
       │  █████████████████████████████████████████████████████████████████████████████░░░  │
       │  99% left                                                  Resets Jun 27 at 15:27  │
       │                                                                                    │
       │  MCP                                                                               │
       │  ████████████████████████████████████████████████████████████████████████████████  │
       │  100% left                                                 Resets Jul 13 at 15:27  │
       │  0 / 100 (100 remaining)                                                           │
       │                                                                                    │
       │  5-hour                                                                            │
       │  ████████████████████████████████████████████████████████████████████████████████  │
       │  100% left                                                  Resets 5 hours window  │
       │                                                                                    │
       └────────────────────────────────────────────────────────────────────────────────────┘
